--- a/package.json
+++ b/package.json
@@ -1,6 +1,45 @@
 {
   "devDependencies": {
-    "lerna": "^3.10.5"
+    "@types/bcrypt": "^3.0.0",
+    "@types/body-parser": "^1.17.0",
+    "@types/cls-hooked": "^4.2.1",
+    "@types/config": "0.0.34",
+    "@types/csurf": "^1.9.35",
+    "@types/es6-shim": "^0.31.39",
+    "@types/express": "^4.16.0",
+    "@types/express-session": "^1.15.11",
+    "@types/http-errors": "^1.6.1",
+    "@types/jest": "^23.3.12",
+    "@types/node": "^10.12.18",
+    "@types/passport": "^1.0.0",
+    "@types/passport-local": "^1.0.33",
+    "@types/react": "^16.7.18",
+    "@types/react-dom": "^16.0.11",
+    "@types/react-redux": "^6.0.12",
+    "@types/shortid": "0.0.29",
+    "@types/std-mocks": "^1.0.0",
+    "@types/supertest": "^2.0.7",
+    "@types/uuid": "^3.4.4",
+    "browserify": "^16.2.3",
+    "buildfile": "^1.2.17",
+    "jest": "^23.6.0",
+    "lerna": "^3.10.5",
+    "loose-envify": "^1.4.0",
+    "nodemon": "^1.18.9",
+    "npm-run-all": "^4.1.5",
+    "std-mocks": "^1.0.1",
+    "supertest": "^3.3.0",
+    "terser": "^3.14.1",
+    "ts-jest": "^23.10.5",
+    "ts-node": "^7.0.1",
+    "tsify": "^4.0.1",
+    "tslint": "^5.12.0",
+    "typescript": "^3.2.2",
+    "typescript-tslint-plugin": "^0.2.1",
+    "watchify": "^3.11.0"
   },
-  "name": "node"
+  "name": "node",
+  "dependencies": {
+    "@rondo/server": "file:packages/server"
+  }
 }
