Move react dependencies to packages/client

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,4 +1,10 @@
 {
   "name": "@rondo/client",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1"
+  }
 }
