--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -33,5 +33,7 @@
     "typeorm": "^0.2.11",
     "uuid": "^3.3.2",
     "winston": "^3.1.0"
-  }
+  },
+  "main": "src/index.js",
+  "types": "src/index.d.ts"
 }
