--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -6,5 +6,7 @@
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1"
-  }
+  },
+  "main": "src/index.js",
+  "types": "src/index.d.ts"
 }
