--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -7,6 +7,6 @@
     "react-redux": "^6.0.0",
     "redux": "^4.0.1"
   },
-  "main": "src/index.js",
-  "types": "src/index.d.ts"
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts"
 }
