--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rondo/common",
   "private": true,
-  "main": "src/index.js",
-  "types": "src/index.d.ts"
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts"
 }
