--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -1,19 +1,7 @@
 {
+  "extends": "../tsconfig.common.json",
   "compilerOptions": {
-    "lib": ["es2015", "dom"],
-    "target": "es3",
-    "moduleResolution": "node",
-    "jsx": "react",
-    "noImplicitAny": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "noUnusedLocals": true,
-    "esModuleInterop": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "plugins": [{
-      "name": "typescript-tslint-plugin",
-      "suppressWhileTypeErrorsPresent": true
-    }]
+    "outDir": "lib",
+    "rootDir": "src"
   }
 }
