--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -34,6 +34,6 @@
     "uuid": "^3.3.2",
     "winston": "^3.1.0"
   },
-  "main": "src/index.js",
-  "types": "src/index.d.ts"
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts"
 }
