--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "dependencies": {
+    "@rondo/client": "file:packages/client",
+    "@rondo/common": "file:packages/common",
+    "@rondo/server": "file:packages/server"
+  },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.17.0",
@@ -20,6 +25,11 @@
     "@types/std-mocks": "^1.0.0",
     "@types/supertest": "^2.0.7",
     "@types/uuid": "^3.4.4",
+    "axios": "^0.18.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
     "browserify": "^16.2.3",
     "buildfile": "^1.2.17",
     "jest": "^23.6.0",
@@ -38,10 +48,5 @@
     "typescript-tslint-plugin": "^0.2.1",
     "watchify": "^3.11.0"
   },
-  "name": "node",
-  "dependencies": {
-    "@rondo/client": "file:packages/client",
-    "@rondo/common": "file:packages/common",
-    "@rondo/server": "file:packages/server"
-  }
+  "name": "node"
 }
