--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@rondo/client",
   "private": true,
-  "dependencies": {
+  "peerDependencies": {
+    "axios": "^0.18.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
