--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/express-session": "^1.15.11",
     "@types/http-errors": "^1.6.1",
     "@types/jest": "^23.3.12",
+    "@types/js-yaml": "^3.12.0",
     "@types/node": "^10.12.18",
     "@types/passport": "^1.0.0",
     "@types/passport-local": "^1.0.33",
@@ -26,10 +27,6 @@
     "@types/supertest": "^2.0.7",
     "@types/uuid": "^3.4.4",
     "axios": "^0.18.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-redux": "^6.0.0",
-    "redux": "^4.0.1",
     "browserify": "^16.2.3",
     "buildfile": "^1.2.17",
     "jest": "^23.6.0",
@@ -37,6 +34,10 @@
     "loose-envify": "^1.4.0",
     "nodemon": "^1.18.9",
     "npm-run-all": "^4.1.5",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
     "std-mocks": "^1.0.1",
     "supertest": "^3.3.0",
     "terser": "^3.14.1",
