--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "dependencies": {
     "@rondo/client": "file:packages/client",
     "@rondo/common": "file:packages/common",
-    "@rondo/server": "file:packages/server"
+    "@rondo/server": "file:packages/server",
+    "@rondo/comments-server": "file:packages/comments-server",
+    "@rondo/comments-common": "file:packages/comments-common",
+    "@rondo/comments-client": "file:packages/comments-client"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
