Fix compilation errors in @rondo/comments-client

--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -3,6 +3,9 @@
   "references": [
     {"path": "client"},
     {"path": "common"},
-    {"path": "server"}
+    {"path": "server"},
+    {"path": "comments-client"},
+    {"path": "comments-common"},
+    {"path": "comments-server"}
   ]
 }
