--- a/package.json
+++ b/package.json
@@ -29,15 +29,19 @@
     "@types/supertest": "^2.0.7",
     "@types/uuid": "^3.4.4",
     "axios": "^0.18.0",
+    "bloomer": "^0.6.5",
     "browserify": "^16.2.3",
     "buildfile": "^1.2.20",
+    "bulma": "^0.7.4",
     "jest": "^24.5.0",
     "lerna": "^3.13.1",
     "loose-envify": "^1.4.0",
+    "node-sass": "^4.11.0",
     "nodemon": "^1.18.9",
     "npm-run-all": "^4.1.5",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-icons": "^3.5.0",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "std-mocks": "^1.0.1",
@@ -45,6 +49,7 @@
     "terser": "^3.14.1",
     "ts-jest": "^24.0.0",
     "ts-node": "^7.0.1",
+    "ts-node-dev": "^1.0.0-pre.32",
     "tsify": "^4.0.1",
     "tslint": "^5.12.0",
     "typescript": "^3.2.2",
