--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/es6-shim": "^0.31.39",
     "@types/express": "^4.16.0",
     "@types/express-session": "^1.15.11",
+    "@types/history": "^4.7.2",
     "@types/http-errors": "^1.6.1",
     "@types/jest": "^23.3.12",
     "@types/js-yaml": "^3.12.0",
@@ -24,6 +25,7 @@
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
     "@types/react-redux": "^6.0.12",
+    "@types/react-router-dom": "^4.3.1",
     "@types/shortid": "0.0.29",
     "@types/std-mocks": "^1.0.0",
     "@types/supertest": "^2.0.7",
@@ -33,6 +35,7 @@
     "browserify": "^16.2.3",
     "buildfile": "^1.2.20",
     "bulma": "^0.7.4",
+    "history": "^4.9.0",
     "jest": "^24.5.0",
     "lerna": "^3.13.1",
     "loose-envify": "^1.4.0",
@@ -43,6 +46,7 @@
     "react-dom": "^16.7.0",
     "react-icons": "^3.5.0",
     "react-redux": "^6.0.0",
+    "react-router-dom": "^4.4.0",
     "redux": "^4.0.1",
     "std-mocks": "^1.0.1",
     "supertest": "^3.3.0",
