--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jest": "^24.5.0",
     "lerna": "^3.13.1",
     "loose-envify": "^1.4.0",
+    "mysql": "^2.16.0",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.9",
     "npm-run-all": "^4.1.5",
