--- a/packages/tsconfig.common.json
+++ b/packages/tsconfig.common.json
@@ -3,7 +3,8 @@
     "composite": true,
     "declaration": true,
     "declarationMap": true,
-    "sourceMap": true,
+    "inlineSourceMap": true,
+    "inlineSources": true,
 
     "lib": ["es2015", "dom"],
     "target": "es3",
@@ -12,7 +13,7 @@
     "noImplicitAny": true,
     "strict": true,
     "skipLibCheck": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "esModuleInterop": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
