--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.9",
     "npm-run-all": "^4.1.5",
+    "open-graph-scraper": "^3.6.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-icons": "^3.5.0",
