--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/http-errors": "^1.6.1",
     "@types/jest": "^23.3.12",
     "@types/js-yaml": "^3.12.0",
+    "@types/nock": "^9.3.1",
     "@types/node": "^10.12.18",
     "@types/passport": "^1.0.0",
     "@types/passport-local": "^1.0.33",
@@ -43,6 +44,7 @@
     "lerna": "^3.13.1",
     "loose-envify": "^1.4.0",
     "mysql": "^2.16.0",
+    "nock": "^10.0.6",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.9",
     "npm-run-all": "^4.1.5",
