Add @rondo/common Markdown

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/http-errors": "^1.6.1",
     "@types/jest": "^23.3.12",
     "@types/js-yaml": "^3.12.0",
+    "@types/marked": "^0.6.5",
     "@types/nock": "^9.3.1",
     "@types/node": "^10.12.18",
     "@types/passport": "^1.0.0",
@@ -28,6 +29,7 @@
     "@types/react-dom": "^16.0.11",
     "@types/react-redux": "^6.0.12",
     "@types/react-router-dom": "^4.3.1",
+    "@types/sanitize-html": "^1.18.3",
     "@types/shortid": "0.0.29",
     "@types/std-mocks": "^1.0.0",
     "@types/supertest": "^2.0.7",
@@ -43,6 +45,7 @@
     "jest": "^24.5.0",
     "lerna": "^3.13.1",
     "loose-envify": "^1.4.0",
+    "marked": "^0.6.2",
     "mysql": "^2.16.0",
     "nock": "^10.0.6",
     "node-sass": "^4.11.0",
@@ -55,6 +58,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.4.0",
     "redux": "^4.0.1",
+    "sanitize-html": "^1.20.0",
     "sourceify": "git+https://github.com/jeremija/sourceify.git#sources-content",
     "std-mocks": "^1.0.1",
     "supertest": "^3.3.0",
