Add ability to load votes by id
Use createDate and updateDate as strings

--- a/packages/server/config/default.yml
+++ b/packages/server/config/default.yml
@@ -12,6 +12,7 @@ app:
   db:
     type: sqlite
     database: data/data.db
+    timezone: 'Z'
     synchronize: false
     dropSchema: false
     migrationsRun: false
