--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "buildfile": "^1.2.22",
     "bulma": "^0.7.4",
     "cookie-parser": "^1.4.4",
+    "date-fns": "^2.0.0-alpha.27",
     "deep-object-diff": "^1.1.0",
     "history": "^4.9.0",
     "jest": "^24.5.0",
