--- a/package.json
+++ b/package.json
@@ -36,12 +36,15 @@
     "@types/uuid": "^3.4.4",
     "axios": "^0.18.0",
     "bloomer": "^0.6.5",
+    "browser-unpack": "^1.4.2",
     "browserify": "^16.2.3",
     "buildfile": "^1.2.22",
     "bulma": "^0.7.4",
+    "common-shakeify": "^0.6.0",
     "cookie-parser": "^1.4.4",
     "date-fns": "^2.0.0-alpha.27",
     "deep-object-diff": "^1.1.0",
+    "esmify": "^2.1.1",
     "history": "^4.9.0",
     "jest": "^24.5.0",
     "lerna": "^3.13.1",
@@ -71,6 +74,8 @@
     "tslint": "^5.12.0",
     "typescript": "^3.3.3333",
     "typescript-tslint-plugin": "^0.2.1",
+    "uglify-js": "^3.5.3",
+    "uglifyify": "^5.0.1",
     "watchify": "^3.11.1"
   },
   "name": "node"
