--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "cookie-parser": "^1.4.4",
     "date-fns": "^2.0.0-alpha.27",
     "deep-object-diff": "^1.1.0",
-    "esmify": "^2.1.1",
+    "esmify": "git+https://github.com/jeremija/esmify.git",
     "history": "^4.9.0",
     "jest": "^24.5.0",
     "lerna": "^3.13.1",
@@ -60,13 +60,12 @@
     "react-dom": "^16.7.0",
     "react-icons": "^3.5.0",
     "react-redux": "^6.0.0",
-    "react-router-dom": "^4.4.0",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "sanitize-html": "^1.20.0",
     "sourceify": "git+https://github.com/jeremija/sourceify.git#sources-content",
     "std-mocks": "^1.0.1",
     "supertest": "^3.3.0",
-    "terser": "^3.14.1",
     "ts-jest": "^24.0.0",
     "ts-node": "^7.0.1",
     "ts-node-dev": "^1.0.0-pre.32",
