--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -2,5 +2,6 @@
   "name": "@rondo/common",
   "private": true,
   "main": "lib/index.js",
+  "module": "esm/index.js",
   "types": "lib/index.d.ts"
 }
