--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -34,5 +34,6 @@
     "winston": "^3.1.0"
   },
   "main": "lib/index.js",
-  "types": "lib/index.d.ts"
+  "types": "lib/index.d.ts",
+  "module": "esm/index.js"
 }
