--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "bulma": "^0.7.4",
     "common-shakeify": "^0.6.0",
     "cookie-parser": "^1.4.4",
-    "date-fns": "^2.0.0-alpha.27",
     "deep-object-diff": "^1.1.0",
     "esmify": "git+https://github.com/jeremija/esmify.git",
     "history": "^4.9.0",
@@ -66,6 +65,7 @@
     "sourceify": "git+https://github.com/jeremija/sourceify.git#sources-content",
     "std-mocks": "^1.0.1",
     "supertest": "^3.3.0",
+    "timeago.js": "^4.0.0-beta.2",
     "ts-jest": "^24.0.0",
     "ts-node": "^7.0.1",
     "ts-node-dev": "^1.0.0-pre.32",
