--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-dom": "^16.8.6",
     "react-icons": "^3.5.0",
     "react-redux": "^6.0.0",
+    "react-router-config": "^5.0.0",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "sanitize-html": "^1.20.0",
