--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
     "@types/react-redux": "^6.0.12",
+    "@types/react-router-config": "^1.1.3",
     "@types/react-router-dom": "^4.3.1",
     "@types/sanitize-html": "^1.18.3",
     "@types/shortid": "0.0.29",
