--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-redux": "^6.0.0",
     "react-router-config": "^5.0.0",
     "react-router-dom": "^4.3.1",
+    "react-ssr-prepass": "^1.0.5",
     "redux": "^4.0.1",
     "sanitize-html": "^1.20.0",
     "sourceify": "git+https://github.com/jeremija/sourceify.git#sources-content",
