--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "nodemon": "^1.18.9",
     "npm-run-all": "^4.1.5",
     "open-graph-scraper": "^3.6.1",
+    "pkg": "^4.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-icons": "^3.5.0",
