--- a/package.json
+++ b/package.json
@@ -71,10 +71,12 @@
     "supertest": "^3.3.0",
     "timeago.js": "^4.0.0-beta.2",
     "ts-jest": "^24.0.0",
-    "ts-node": "^7.0.1",
+    "ts-node": "^8.3.0",
     "ts-node-dev": "^1.0.0-pre.32",
+    "ts-transformer-keys": "^0.3.5",
     "tsify": "^4.0.1",
     "tslint": "^5.12.0",
+    "ttypescript": "^1.5.7",
     "typescript": "^3.3.3333",
     "typescript-tslint-plugin": "^0.2.1",
     "uglify-js": "^3.5.3",
