Add jsonrpc local, remote and supertest clients

--- a/packages/tsconfig.common.json
+++ b/packages/tsconfig.common.json
@@ -20,6 +20,8 @@
     "plugins": [{
       "name": "typescript-tslint-plugin",
       "suppressWhileTypeErrorsPresent": true
+    }, {
+      "transform": "ts-transformer-keys/transformer"
     }]
   }
 }
