Add test @rondo/scripts package for CLI

--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -7,6 +7,9 @@
     "compile": "tsc",
     "clean": "rm -rf lib/"
   },
+  "bin": {
+    "rondo": "./lib/index.js"
+  },
   "dependencies": {},
   "types": "lib/index.d.ts",
   "devDependencies": {},
