Split jsonrpc into smaller packages

--- a/packages/jsonrpc-client/package.json
+++ b/packages/jsonrpc-client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rondo/jsonrpc",
+  "name": "@rondo/jsonrpc-client",
   "private": true,
   "scripts": {
     "test": "jest",
@@ -8,7 +8,8 @@
     "clean": "rm -rf lib/"
   },
   "dependencies": {},
-  "types": "lib/index.d.ts",
   "devDependencies": {},
-  "module": "lib/index.js"
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "module": "esm/index.js"
 }
