--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@rondo/comments-client": "file:packages/comments-client",
     "@rondo/image-upload": "file:packages/image-upload",
     "@rondo/tasq": "file:packages/tasq",
-    "@rondo/jsonrpc": "file:packages/jsonrpc",
+    "@rondo/jsonrpc-client": "file:packages/jsonrpc-client",
+    "@rondo/jsonrpc-server": "file:packages/jsonrpc-server",
+    "@rondo/jsonrpc-common": "file:packages/jsonrpc-common",
     "@rondo/scripts": "file:packages/scripts"
   },
   "devDependencies": {
@@ -79,7 +81,7 @@
     "tsify": "^4.0.1",
     "tslint": "^5.12.0",
     "ttypescript": "^1.5.7",
-    "typescript": "^3.3.3333",
+    "typescript": "^3.5.3",
     "typescript-tslint-plugin": "^0.2.1",
     "uglify-js": "^3.5.3",
     "uglifyify": "^5.0.1",
