Use @rondo/argparse for build script

--- a/packages/scripts/tsconfig.esm.json
+++ b/packages/scripts/tsconfig.esm.json
@@ -3,5 +3,7 @@
   "compilerOptions": {
     "outDir": "esm"
   },
-  "references": []
+  "references": [
+    {"path": "../argparse/tsconfig.esm.json"}
+  ]
 }
