--- a/packages/argparse/package.json
+++ b/packages/argparse/package.json
@@ -10,5 +10,5 @@
   "dependencies": {},
   "types": "lib/index.d.ts",
   "devDependencies": {},
-  "module": "lib/index.js"
+  "main": "lib/index.js"
 }
