Add Contextual<Service, Context> type
As seen in TeamService2.ts, the Contextual type will add Context as the
last argument to any method of the interface, as long as the method has
0-4 arguments.

Interfaces with more than 4 arguments cannot use this type, but they
could be converted to interfaces which use 1 argument
(object/dictionary) only.

Some long-term thinking: Maybe only methods with a single argument
should be supported, similar to the way gRPC does it.

--- a/packages/server/tsconfig.esm.json
+++ b/packages/server/tsconfig.esm.json
@@ -4,8 +4,7 @@
     "outDir": "esm"
   },
   "references": [
-    {
-      "path": "../common/tsconfig.esm.json"
-    }
+    {"path": "../common/tsconfig.esm.json"},
+    {"path": "../jsonrpc/tsconfig.esm.json"}
   ]
 }
