--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -5,6 +5,7 @@
     "rootDir": "src"
   },
   "references": [
-    {"path": "../common"}
+    {"path": "../common"},
+    {"path": "../jsonrpc"}
   ]
 }
