--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rondo/common",
+  "name": "@rondo.dev/common",
   "private": true,
   "main": "lib/index.js",
   "module": "esm/index.js",
