--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -30,8 +30,7 @@
     "shortid": "^2.2.14",
     "sqlite3": "^4.0.4",
     "typeorm": "^0.2.11",
-    "uuid": "^3.3.2",
-    "winston": "^3.1.0"
+    "uuid": "^3.3.2"
   },
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
