--- a/packages/config/tsconfig.json
+++ b/packages/config/tsconfig.json
@@ -5,9 +5,6 @@
     "rootDir": "src"
   },
   "references": [
-    {"path": "../common"},
-    {"path": "../jsonrpc"},
-    {"path": "../logger"},
-    {"path": "../config"}
+    {"path": "../logger"}
   ]
 }
