--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -7,7 +7,9 @@
     "compile": "tsc",
     "clean": "rm -rf lib/"
   },
-  "dependencies": {},
+  "dependencies": {
+    "js-yaml": "^3.12.1"
+  },
   "main": "lib/index.js",
   "types": "lib/index.d.ts"
 }
