Fix SessionStore concurrency in tests by debouncing fn

--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -8,6 +8,7 @@
     {"path": "../common"},
     {"path": "../jsonrpc"},
     {"path": "../logger"},
-    {"path": "../config"}
+    {"path": "../config"},
+    {"path": "../tasq"}
   ]
 }
