--- a/packages/tasq/package.json
+++ b/packages/tasq/package.json
@@ -10,5 +10,6 @@
   "dependencies": {},
   "types": "lib/index.d.ts",
   "devDependencies": {},
-  "module": "lib/index.js"
+  "module": "lib/index.js",
+  "main": "lib/index.js"
 }
