--- a/packages/jsonrpc/tsconfig.json
+++ b/packages/jsonrpc/tsconfig.json
@@ -1,9 +1,11 @@
 {
   "extends": "../tsconfig.common.json",
   "compilerOptions": {
+    "target": "es5",
     "outDir": "lib",
     "rootDir": "src"
   },
   "references": [
+    {"path": "../logger"}
   ]
 }
