Add jsonrpc createClientMock

--- a/packages/jsonrpc/tsconfig.esm.json
+++ b/packages/jsonrpc/tsconfig.esm.json
@@ -3,5 +3,8 @@
   "compilerOptions": {
     "outDir": "esm"
   },
-  "references": []
+  "references": [
+    {"path": "../logger/tsconfig.esm.json"},
+    {"path": "../redux/tsconfig.esm.json"}
+  ]
 }
