--- a/packages/jsonrpc/tsconfig.json
+++ b/packages/jsonrpc/tsconfig.json
@@ -6,6 +6,7 @@
     "rootDir": "src"
   },
   "references": [
-    {"path": "../logger"}
+    {"path": "../logger"},
+    {"path": "../redux"}
   ]
 }
