--- a/packages/client/tsconfig.esm.json
+++ b/packages/client/tsconfig.esm.json
@@ -5,7 +5,7 @@
   },
   "references": [
     {
-      "path": "../comments-common/tsconfig.esm.json"
+      "path": "../common/tsconfig.esm.json"
     }
   ]
 }
