Add rimraf and rondo clean script

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/react-dom": "^16.8.4",
     "@types/react-redux": "^7.1.2",
     "@types/react-router-dom": "^4.3.1",
+    "@types/rimraf": "^2.0.2",
     "@types/sanitize-html": "^1.18.3",
     "@types/shortid": "0.0.29",
     "@types/std-mocks": "^1.0.0",
@@ -74,6 +75,7 @@
     "react-router-dom": "^5.0.1",
     "react-ssr-prepass": "^1.0.5",
     "redux": "^4.0.1",
+    "rimraf": "^3.0.0",
     "sanitize-html": "^1.20.0",
     "sourceify": "git+https://github.com/jeremija/sourceify.git#sources-content",
     "std-mocks": "^1.0.1",
