--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "cookie-parser": "^1.4.4",
     "deep-object-diff": "^1.1.0",
     "esmify": "git+https://github.com/jeremija/esmify.git",
+    "formik": "^1.5.8",
     "history": "^4.9.0",
     "jest": "^24.5.0",
     "lerna": "^3.16.4",
