--- a/packages/client/tsconfig.esm.json
+++ b/packages/client/tsconfig.esm.json
@@ -5,6 +5,9 @@
   },
   "references": [
     {
+      "path": "../redux/tsconfig.esm.json"
+    },
+    {
       "path": "../common/tsconfig.esm.json"
     }
   ]
