--- a/packages/jsonrpc/tsconfig.esm.json
+++ b/packages/jsonrpc/tsconfig.esm.json
@@ -4,7 +4,11 @@
     "outDir": "esm"
   },
   "references": [
-    {"path": "../logger/tsconfig.esm.json"},
-    {"path": "../redux/tsconfig.esm.json"}
+    {
+      "path": "../logger/tsconfig.esm.json"
+    },
+    {
+      "path": "../redux/tsconfig.esm.json"
+    }
   ]
 }
