--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -11,5 +11,6 @@
     "js-yaml": "^3.12.1"
   },
   "main": "lib/index.js",
-  "types": "lib/index.d.ts"
+  "types": "lib/index.d.ts",
+  "module": "esm/index.js"
 }
