--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -10,6 +10,5 @@
   "dependencies": {},
   "main": "lib/index.js",
   "module": "esm/index.js",
-  "types": "lib/index.d.ts",
-  "module": "esm/index.js"
+  "types": "lib/index.d.ts"
 }
