--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -13,6 +13,6 @@
   "dependencies": {},
   "types": "lib/index.d.ts",
   "devDependencies": {},
-  "module": "lib/index.js",
+  "module": "esm/index.js",
   "main": "lib/index.js"
 }
