Install eslint and fix errors
- argparse
- scripts
- tasq
- validator

--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
   "dependencies": {
-    "@rondo.dev/client": "file:packages/client",
-    "@rondo.dev/common": "file:packages/common",
-    "@rondo.dev/server": "file:packages/server",
-    "@rondo.dev/comments-server": "file:packages/comments-server",
-    "@rondo.dev/comments-common": "file:packages/comments-common",
-    "@rondo.dev/comments-client": "file:packages/comments-client",
-    "@rondo.dev/image-upload": "file:packages/image-upload",
-    "@rondo.dev/tasq": "file:packages/tasq",
-    "@rondo.dev/jsonrpc": "file:packages/jsonrpc",
-    "@rondo.dev/scripts": "file:packages/scripts",
     "@rondo.dev/argparse": "file:packages/argparse",
-    "@rondo.dev/logger": "file:packages/logger",
+    "@rondo.dev/client": "file:packages/client",
+    "@rondo.dev/comments-client": "file:packages/comments-client",
+    "@rondo.dev/comments-common": "file:packages/comments-common",
+    "@rondo.dev/comments-server": "file:packages/comments-server",
+    "@rondo.dev/common": "file:packages/common",
     "@rondo.dev/config": "file:packages/config",
-    "@rondo.dev/redux": "file:packages/redux",
     "@rondo.dev/http-client": "file:packages/http-client",
-    "@rondo.dev/test-utils": "file:packages/test-utils",
     "@rondo.dev/http-types": "file:packages/http-types",
-    "@rondo.dev/validator": "file:packages/validator"
+    "@rondo.dev/image-upload": "file:packages/image-upload",
+    "@rondo.dev/jsonrpc": "file:packages/jsonrpc",
+    "@rondo.dev/logger": "file:packages/logger",
+    "@rondo.dev/redux": "file:packages/redux",
+    "@rondo.dev/scripts": "file:packages/scripts",
+    "@rondo.dev/server": "file:packages/server",
+    "@rondo.dev/tasq": "file:packages/tasq",
+    "@rondo.dev/test-utils": "file:packages/test-utils",
+    "@rondo.dev/validator": "file:packages/validator",
+    "@typescript-eslint/eslint-plugin": "^2.2.0",
+    "@typescript-eslint/parser": "^2.2.0",
+    "eslint": "^6.4.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
