--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -1,7 +1,11 @@
 extends:
  - eslint:recommended
+ - plugin:react/recommended
  - plugin:@typescript-eslint/eslint-recommended
  - plugin:@typescript-eslint/recommended
+settings:
+  react:
+    version: 'detect'
 rules:
   max-len:
     - warn
