Fix linting errors in packages/jsonrpc

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -11,6 +11,10 @@ rules:
     - warn
     - code: 80
       ignorePattern: '^import .* from '
+  comma-dangle:
+    - warn
+    - always-multiline
+
   # semi:
   #   - warn
   #   - never
