--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -29,6 +29,11 @@ rules:
         delimiter: none
       singleline:
         delimiter: comma
+  '@typescript-eslint/no-unused-vars':
+    - warn
+    - vars: all
+      args: none
+      ignoreRestSiblings: true
   '@typescript-eslint/explicit-function-return-type': off
   '@typescript-eslint/no-non-null-assertion': off
   '@typescript-eslint/no-use-before-define': off
