--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -37,6 +37,10 @@ rules:
   '@typescript-eslint/explicit-function-return-type': off
   '@typescript-eslint/no-non-null-assertion': off
   '@typescript-eslint/no-use-before-define': off
+  '@typescript-eslint/no-empty-interface': off
+  '@typescript-eslint/no-explicit-any':
+    - warn
+    - ignoreRestArgs: true
 overrides:
   - files:
     - '*.test.ts'
