--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -6,6 +6,7 @@
   },
   "references": [
     {"path": "../common"},
+    {"path": "../argparse"},
     {"path": "../client"},
     {"path": "../jsonrpc"},
     {"path": "../logger"},
