--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
     "@rondo.dev/db-typeorm": "file:packages/db-typeorm"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.2.0",
-    "@typescript-eslint/parser": "^2.2.0",
     "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.17.0",
     "@types/cls-hooked": "^4.2.1",
@@ -51,6 +49,8 @@
     "@types/std-mocks": "^1.0.0",
     "@types/supertest": "^2.0.7",
     "@types/uuid": "^3.4.4",
+    "@typescript-eslint/eslint-plugin": "^2.2.0",
+    "@typescript-eslint/parser": "^2.2.0",
     "axios": "^0.19.0",
     "bloomer": "^0.6.5",
     "browser-unpack": "^1.4.2",
@@ -96,6 +96,7 @@
     "ts-transformer-keys": "^0.3.5",
     "tsify": "^4.0.1",
     "ttypescript": "^1.5.7",
+    "typeorm": "^0.2.19",
     "typescript": "^3.6.3",
     "typescript-tslint-plugin": "^0.5.4",
     "uglify-js": "^3.5.3",
