--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "sanitize-html": "^1.20.0",
     "sourceify": "git+https://github.com/jeremija/sourceify.git#sources-content",
     "std-mocks": "^1.0.1",
+    "styled-components": "^4.4.0",
     "supertest": "^4.0.2",
     "timeago.js": "^4.0.0-beta.2",
     "ts-jest": "^24.0.0",
@@ -99,6 +100,7 @@
     "ttypescript": "^1.5.7",
     "typeorm": "^0.2.19",
     "typescript": "^3.6.3",
+    "typescript-plugin-styled-components": "^1.4.3",
     "typescript-tslint-plugin": "^0.5.4",
     "uglify-js": "^3.5.3",
     "uglifyify": "^5.0.1",
