Add typescript-plugin-styled-components to client/tsconfig.json

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -7,5 +7,12 @@
   "references": [
     {"path": "../redux"},
     {"path": "../common"}
-  ]
+  ],
+  "plugins": [{
+    "transform": "typescript-plugin-styled-components",
+    "type": "config",
+    "displayName": true,
+    "minify": false,
+    "ssr": true
+  }]
 }
