Add version tag to all package.json files

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@rondo.dev/common",
+  "version": "0.0.1",
   "private": true,
   "main": "lib/index.js",
   "module": "esm/index.js",
