Add ability to generate package.json deps from root pkg

--- a/package.json
+++ b/package.json
@@ -54,22 +54,31 @@
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
     "axios": "^0.19.0",
+    "bcrypt": "^3.0.6",
     "bloomer": "^0.6.5",
+    "body-parser": "^1.19.0",
     "browser-unpack": "^1.4.2",
     "browserify": "^16.2.3",
     "browserify-hmr": "^0.4.0",
     "buildfile": "^1.2.22",
     "bulma": "^0.7.4",
+    "cls-hooked": "^4.2.2",
     "common-shakeify": "^0.6.0",
     "cookie-parser": "^1.4.4",
+    "csurf": "^1.10.0",
     "deep-object-diff": "^1.1.0",
+    "email-validator": "^2.0.4",
     "eslint": "^6.4.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-react": "^7.14.3",
     "esmify": "git+https://github.com/jeremija/esmify.git",
+    "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "formik": "^1.5.8",
     "history": "^4.9.0",
+    "http-errors": "^1.7.3",
     "jest": "^24.5.0",
+    "js-yaml": "^3.13.1",
     "lerna": "^3.16.4",
     "loose-envify": "^1.4.0",
     "marked": "^0.7.0",
@@ -79,16 +88,21 @@
     "nodemon": "^1.18.9",
     "npm-run-all": "^4.1.5",
     "open-graph-scraper": "^3.6.2",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pkg": "^4.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-icons": "^3.5.0",
     "react-redux": "^7.1.1",
+    "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-ssr-prepass": "^1.0.5",
     "redux": "^4.0.1",
+    "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "sanitize-html": "^1.20.0",
+    "shortid": "^2.2.15",
     "sourceify": "git+https://github.com/jeremija/sourceify.git#sources-content",
     "std-mocks": "^1.0.1",
     "styled-components": "^4.4.0",
