--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -11,5 +11,8 @@
   "dependencies": {},
   "main": "lib/index.js",
   "module": "esm/index.js",
-  "types": "lib/index.d.ts"
+  "types": "lib/index.d.ts",
+  "devDependencies": {
+    "std-mocks": "^1.0.1"
+  }
 }
