--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -15,24 +15,44 @@
     "typeorm": "ts-node ./node_modules/.bin/typeorm"
   },
   "dependencies": {
-    "bcrypt": "^3.0.3",
-    "body-parser": "^1.18.3",
-    "cls-hooked": "^4.2.2",
-    "csurf": "^1.9.0",
-    "email-validator": "^2.0.4",
-    "express": "^4.16.4",
-    "express-session": "^1.15.6",
-    "http-errors": "^1.7.1",
+    "@rondo.dev/logger": "0.0.1",
+    "@rondo.dev/db-typeorm": "0.0.1",
+    "typeorm": "^0.2.19",
+    "express": "^4.17.1",
     "passport": "^0.4.0",
-    "passport-google": "^0.3.0",
     "passport-local": "^1.0.0",
-    "reflect-metadata": "^0.1.12",
-    "shortid": "^2.2.14",
-    "sqlite3": "^4.0.4",
-    "typeorm": "^0.2.11",
-    "uuid": "^3.3.2"
+    "@rondo.dev/common": "0.0.1",
+    "csurf": "^1.10.0",
+    "@rondo.dev/validator": "0.0.1",
+    "shortid": "^2.2.15",
+    "@rondo.dev/tasq": "0.0.1",
+    "express-session": "^1.16.2",
+    "cls-hooked": "^4.2.2",
+    "http-errors": "^1.7.3",
+    "@rondo.dev/client": "0.0.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.1.1",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
+    "react-ssr-prepass": "^1.0.5",
+    "redux": "^4.0.1",
+    "styled-components": "^4.4.0",
+    "@rondo.dev/jsonrpc": "0.0.1",
+    "@rondo.dev/http-types": "0.0.1",
+    "@rondo.dev/db": "0.0.1",
+    "bcrypt": "^3.0.6",
+    "email-validator": "^2.0.4",
+    "express-serve-static-core": "^0.1.1",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "@rondo.dev/config": "0.0.1",
+    "@rondo.dev/argparse": "0.0.1",
+    "@rondo.dev/http-client": "0.0.1",
+    "supertest": "^4.0.2"
   },
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "module": "esm/index.js"
+  "module": "esm/index.js",
+  "devDependencies": {}
 }
