--- a/packages/jsonrpc/package.json
+++ b/packages/jsonrpc/package.json
@@ -8,8 +8,20 @@
     "compile": "tsc",
     "clean": "rm -rf lib/"
   },
-  "dependencies": {},
-  "devDependencies": {},
+  "dependencies": {
+    "reflect-metadata": "^0.1.13",
+    "@rondo.dev/redux": "0.0.1",
+    "@rondo.dev/logger": "0.0.1",
+    "express": "^4.17.1",
+    "supertest": "^4.0.2",
+    "axios": "^0.19.0"
+  },
+  "devDependencies": {
+    "body-parser": "^1.19.0",
+    "express-serve-static-core": "^0.1.1",
+    "redux": "^4.0.1",
+    "ts-transformer-keys": "^0.3.5"
+  },
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "module": "esm/index.js"
