--- a/packages/validator/package.json
+++ b/packages/validator/package.json
@@ -11,5 +11,6 @@
   "dependencies": {},
   "main": "lib/index.js",
   "module": "esm/index.js",
-  "types": "lib/index.d.ts"
+  "types": "lib/index.d.ts",
+  "devDependencies": {}
 }
